# crabbyos

./: .gdbinit  Cargo.toml  build.rs  linker.ld  run_loop.sh  shell.nix
.cargo/: config.toml
src/: entry.s  main.rs  page.rs  uart.rs
